# esp32-c-wrappers

camera/camera-util/: CMakeLists.txt  camera_util.c  camera_util.h  idf_component.yml
http-server/http-server-util/: CMakeLists.txt  http_server_util.c  http_server_util.h
networking/wifi/: CMakeLists.txt  Kconfig  wifi.c  wifi.h
storage/file_operations/: CMakeLists.txt  file_operations.c  file_operations.h
storage/sdcard/: CMakeLists.txt  sdcard.c  sdcard.h
storage/spiffs/: CMakeLists.txt  mount.c  mount.h  spiffs.c  spiffs.h
time-sync/sntp/: CMakeLists.txt  Kconfig  sntp_sync.c  sntp_sync.h
